--- a/packages/container/public/index.html
+++ b/packages/container/public/index.html
@@ -1,9 +1,7 @@
-<!doctype html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-</head>
-<body>
+<!DOCTYPE html>
+<html>
+  <head></head>
+  <body>
     <div id="root"></div>
-</body>
+  </body>
 </html>
