--- a/packages/marketing/public/index.html
+++ b/packages/marketing/public/index.html
@@ -1,9 +1,7 @@
-<!doctype html>
-<html lang="en">
-<head>
-
-</head>
-<body>
+<!DOCTYPE html>
+<html>
+  <head></head>
+  <body>
     <div id="_marketing-dev-root"></div>
-</body>
+  </body>
 </html>
